--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -32,6 +32,14 @@
     "vitest": "^1.0.0"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudformation": "^3.975.0",
+    "@aws-sdk/client-codebuild": "^3.975.0",
+    "@aws-sdk/client-dynamodb": "^3.975.0",
+    "@aws-sdk/client-iam": "^3.975.0",
+    "@aws-sdk/client-lambda": "^3.975.0",
+    "@aws-sdk/client-s3": "^3.975.0",
+    "@aws-sdk/client-secrets-manager": "^3.975.0",
+    "@aws-sdk/client-sts": "^3.975.0",
     "aws-cdk-lib": "^2.100.0",
     "constructs": "^10.0.0"
   }
