--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "simple-git": "^3.22.0"
   },
   "devDependencies": {
+    "@aws-sdk/client-cloudwatch-logs": "^3.975.0",
     "@types/node": "^20.11.5",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
