--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-cloudformation": "^3.975.0",
+    "@aws-sdk/client-cloudwatch": "^3.975.0",
     "@aws-sdk/client-codebuild": "^3.975.0",
     "@aws-sdk/client-dynamodb": "^3.975.0",
     "@aws-sdk/client-iam": "^3.975.0",
@@ -41,6 +42,7 @@
     "@aws-sdk/client-secrets-manager": "^3.975.0",
     "@aws-sdk/client-sts": "^3.975.0",
     "aws-cdk-lib": "^2.100.0",
-    "constructs": "^10.0.0"
+    "constructs": "^10.0.0",
+    "simple-git": "^3.30.0"
   }
 }
