--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -35,14 +35,19 @@
     "@aws-sdk/client-cloudformation": "^3.975.0",
     "@aws-sdk/client-cloudwatch": "^3.975.0",
     "@aws-sdk/client-codebuild": "^3.975.0",
+    "@aws-sdk/client-codepipeline": "^3.975.0",
     "@aws-sdk/client-dynamodb": "^3.975.0",
     "@aws-sdk/client-iam": "^3.975.0",
     "@aws-sdk/client-lambda": "^3.975.0",
     "@aws-sdk/client-s3": "^3.975.0",
     "@aws-sdk/client-secrets-manager": "^3.975.0",
+    "@aws-sdk/client-sns": "^3.975.0",
     "@aws-sdk/client-sts": "^3.975.0",
+    "@aws-sdk/util-dynamodb": "^3.975.0",
     "aws-cdk-lib": "^2.100.0",
+    "aws-sdk-client-mock": "^4.1.0",
     "constructs": "^10.0.0",
+    "fast-check": "^4.5.3",
     "simple-git": "^3.30.0"
   }
 }
